= BinData Changelog

== Version 1.x.x (2013-xx-xx)

* Allow custom types to have endian, not just numerics.
* Added missing field to TCP example.  Thanks to Bertrand Paquet.
* Made tests compatible with JRuby.  Thanks to Charles Oliver Nutter.
* Support travis ci for those that use it.  Thanks to Charles Oliver Nutter.

== Version 1.6.0 (2013-09-02)

* Added license to .gemspec
* Moved test suite from RSpec to Minitest.
* Added :assert and :asserted_value.
* :check_value has been deprecated. Use :assert instead.

== Version 1.5.1 (2013-08-16)

* Rework build system and include .gemspec.  Requested by Simon Shortman.
* Fixed bug when Choice#clear didn't clear everything.  Thanks to Simon
  Shortman for the bug report.
* Moved BinData::VERSION into its own file.  Thanks to John Van Enk.

== Version 1.5.0 (2013-05-21)

* Moved to github.
* Updated to Ruby 2.0
* Arrays now accept BinData object factories for :type (feature request by
  Matt Dainty).
* Dynamically generated BinData objects can use the :name parameter to
  register themselves.
* Remove functionality that has been deprecated for two years.

== Version 1.4.5 (2012-07-24)

* Added the :pad_front option for padding to occur at the front of a String.
  (suggested by Eduardo Mourão).

== Version 1.4.4 (2012-06-21)

* Fixed bug where user defined boolean primitive wouldn't set its
  value to false (reported by Frank Roland).
* Fixed infinite looping bug caused by nested Choices.
* Renamed String parameter :pad_char to :pad_byte.
* Updated manual.

== Version 1.4.3 (2011-10-01)

* Exceptions no longer ignored inside lambdas when reading until eof 
  in an array (thanks John Labovitz).
* Fixed interaction bug between choices and records (reported by
  Refrigerator Johnny).

== Version 1.4.2 (2011-08-06)

* \=~ now works for strings.

== Version 1.4.1 (2011-06-20)

* Added :default option for Choices.
* Added count_bytes_remaining keyword.
* Increased speed of lazy evaluation.

== Version 1.4.0 (2011-06-14)
