@@ -1,9 +1,10 @@
 # BinData -- Binary data manipulator.
-# Copyright (c) 2007 - 2013 Dion Mendel.
+# Copyright (c) 2007 - 2014 Dion Mendel.
 
 require 'bindata/version'
 require 'bindata/array'
 require 'bindata/bits'
+require 'bindata/buffer'
 require 'bindata/choice'
 require 'bindata/count_bytes_remaining'
 require 'bindata/float'
@@ -30,4 +31,4 @@ require 'bindata/deprecated'
 #
 # BinData is released under the same license as Ruby.
 #
-# Copyright (c) 2007 - 2013 Dion Mendel.
+# Copyright (c) 2007 - 2014 Dion Mendel.
